[package]
name = "bladio"
version = "0.1.0"
authors = ["Krendil <krendilboove@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "bladio"

[dependencies]
pyo3 = { version = "0.17.3", features = ["auto-initialize"] }
vorbis_rs = "0.1.0"
