[package]
name = "bladio"
version = "0.1.0"
authors = ["Krendil <krendilboove@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "bladio"

[dependencies]
pyo3 = { version = "0.17.3", features = ["auto-initialize"] }
vorbis_rs = "0.1.0"
serde_json = "1.0"
clap = { version = "4.1.1", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
regex = "1.7.1"
lazy_static = "1.4.0"
magnetic = "2.4.1"
